musl/issues/GenomeAdmixR.out
* installing to library '/home/runner/R-patched/lib'
* installing *source* package 'GenomeAdmixR' ...
** package 'GenomeAdmixR' successfully unpacked and MD5 sums checked
** using staged installation
** libs
using C++ compiler: 'g++ (Alpine 14.2.0) 14.2.0'
using C++14
make[1]: Entering directory '/var/local/PKGS/CRAN/GenomeAdmixR/src'
g++ -std=gnu++14 -I"/home/runner/R-patched/build/include" -DNDEBUG  -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/RcppArmadillo/include' -I'/home/runner/R-patched/lib/RcppParallel/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes -D__MUSL__   -c Fish.cpp -o Fish.o
g++ -std=gnu++14 -I"/home/runner/R-patched/build/include" -DNDEBUG  -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/RcppArmadillo/include' -I'/home/runner/R-patched/lib/RcppParallel/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes -D__MUSL__   -c RcppExports.cpp -o RcppExports.o
g++ -std=gnu++14 -I"/home/runner/R-patched/build/include" -DNDEBUG  -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/RcppArmadillo/include' -I'/home/runner/R-patched/lib/RcppParallel/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes -D__MUSL__   -c helper_functions.cpp -o helper_functions.o
In file included from /usr/include/c++/14.2.0/vector:62,
                 from helper_functions.h:11,
                 from helper_functions.cpp:8:
In static member function 'static _Up* std::__copy_move<_IsMove, true, std::random_access_iterator_tag>::__copy_m(_Tp*, _Tp*, _Up*) [with _Tp = const double; _Up = double; bool _IsMove = false]',
    inlined from '_OI std::__copy_move_a2(_II, _II, _OI) [with bool _IsMove = false; _II = const double*; _OI = double*]' at /usr/include/c++/14.2.0/bits/stl_algobase.h:521:30,
    inlined from '_OI std::__copy_move_a1(_II, _II, _OI) [with bool _IsMove = false; _II = const double*; _OI = double*]' at /usr/include/c++/14.2.0/bits/stl_algobase.h:548:42,
    inlined from '_OI std::__copy_move_a(_II, _II, _OI) [with bool _IsMove = false; _II = __gnu_cxx::__normal_iterator<const double*, vector<double> >; _OI = double*]' at /usr/include/c++/14.2.0/bits/stl_algobase.h:555:31,
    inlined from '_OI std::copy(_II, _II, _OI) [with _II = __gnu_cxx::__normal_iterator<const double*, vector<double> >; _OI = double*]' at /usr/include/c++/14.2.0/bits/stl_algobase.h:651:7,
    inlined from 'static _ForwardIterator std::__uninitialized_copy<true>::__uninit_copy(_InputIterator, _InputIterator, _ForwardIterator) [with _InputIterator = __gnu_cxx::__normal_iterator<const double*, std::vector<double> >; _ForwardIterator = double*]' at /usr/include/c++/14.2.0/bits/stl_uninitialized.h:147:27,
    inlined from '_ForwardIterator std::uninitialized_copy(_InputIterator, _InputIterator, _ForwardIterator) [with _InputIterator = __gnu_cxx::__normal_iterator<const double*, vector<double> >; _ForwardIterator = double*]' at /usr/include/c++/14.2.0/bits/stl_uninitialized.h:185:15,
    inlined from '_ForwardIterator std::__uninitialized_copy_a(_InputIterator, _InputIterator, _ForwardIterator, allocator<_Tp>&) [with _InputIterator = __gnu_cxx::__normal_iterator<const double*, vector<double> >; _ForwardIterator = double*; _Tp = double]' at /usr/include/c++/14.2.0/bits/stl_uninitialized.h:373:37,
    inlined from 'std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = double; _Alloc = std::allocator<double>]' at /usr/include/c++/14.2.0/bits/stl_vector.h:606:31,
    inlined from 'std::vector<double> scale_markers(const std::vector<double>&, double)' at helper_functions.cpp:625:12:
/usr/include/c++/14.2.0/bits/stl_algobase.h:452:30: warning: 'void* __builtin_memmove(void*, const void*, long unsigned int)' writing between 9 and 9223372036854775807 bytes into a region of size 8 overflows the destination [-Wstringop-overflow=]
  452 |             __builtin_memmove(__result, __first, sizeof(_Tp) * _Num);
      |             ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/14.2.0/x86_64-alpine-linux-musl/bits/c++allocator.h:33,
                 from /usr/include/c++/14.2.0/bits/allocator.h:46,
                 from /usr/include/c++/14.2.0/vector:63:
In member function '_Tp* std::__new_allocator<_Tp>::allocate(size_type, const void*) [with _Tp = double]',
    inlined from 'static _Tp* std::allocator_traits<std::allocator<_Tp1> >::allocate(allocator_type&, size_type) [with _Tp = double]' at /usr/include/c++/14.2.0/bits/alloc_traits.h:478:28,
    inlined from 'std::_Vector_base<_Tp, _Alloc>::pointer std::_Vector_base<_Tp, _Alloc>::_M_allocate(std::size_t) [with _Tp = double; _Alloc = std::allocator<double>]' at /usr/include/c++/14.2.0/bits/stl_vector.h:380:33,
    inlined from 'void std::_Vector_base<_Tp, _Alloc>::_M_create_storage(std::size_t) [with _Tp = double; _Alloc = std::allocator<double>]' at /usr/include/c++/14.2.0/bits/stl_vector.h:398:44,
    inlined from 'std::_Vector_base<_Tp, _Alloc>::_Vector_base(std::size_t, const allocator_type&) [with _Tp = double; _Alloc = std::allocator<double>]' at /usr/include/c++/14.2.0/bits/stl_vector.h:334:26,
    inlined from 'std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = double; _Alloc = std::allocator<double>]' at /usr/include/c++/14.2.0/bits/stl_vector.h:603:61,
    inlined from 'std::vector<double> scale_markers(const std::vector<double>&, double)' at helper_functions.cpp:625:12:
/usr/include/c++/14.2.0/bits/new_allocator.h:151:55: note: destination object of size 8 allocated by 'operator new'
  151 |         return static_cast<_Tp*>(_GLIBCXX_OPERATOR_NEW(__n * sizeof(_Tp)));
      |                                                       ^
g++ -std=gnu++14 -I"/home/runner/R-patched/build/include" -DNDEBUG  -I'/home/runner/R-patched/lib/Rcpp/include' -I'/home/runner/R-patched/lib/RcppArmadillo/include' -I'/home/runner/R-patched/lib/RcppParallel/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes -D__MUSL__   -c simulate.cpp -o simulate.o
simulate.cpp: In function 'void update_pop(const std::vector<Fish>&, std::vector<Fish>&, size_t, double, const std::vector<double>&, const double&, bool, double, int)':
simulate.cpp:82:7: error: 'tbb' has not been declared
   82 |       tbb::task_scheduler_init _tbb((num_threads > 0) ? num_threads : tbb::task_scheduler_init::automatic);
      |       ^~~
simulate.cpp:84:7: error: 'tbb' has not been declared
   84 |       tbb::parallel_for(
      |       ^~~
simulate.cpp:85:9: error: 'tbb' has not been declared
   85 |         tbb::blocked_range<unsigned>(0, pop_size),
      |         ^~~
simulate.cpp:85:28: error: expected primary-expression before 'unsigned'
   85 |         tbb::blocked_range<unsigned>(0, pop_size),
      |                            ^~~~~~~~
simulate.cpp:86:19: error: 'tbb' does not name a type
   86 |         [&](const tbb::blocked_range<unsigned>& r) {
      |                   ^~~
simulate.cpp: In lambda function:
simulate.cpp:117:9: error: expected '{' before ';' token
  117 |       });
      |         ^
simulate.cpp: In function 'void update_pop(const std::vector<Fish>&, std::vector<Fish>&, size_t, double, const std::vector<double>&, const double&, bool, double, int)':
simulate.cpp:117:9: error: expected ')' before ';' token
  117 |       });
      |         ^
      |         )
simulate.cpp:84:24: note: to match this '('
   84 |       tbb::parallel_for(
      |                        ^
make[1]: *** [/home/runner/R-patched/build/etc/Makeconf:204: simulate.o] Error 1
make[1]: Leaving directory '/var/local/PKGS/CRAN/GenomeAdmixR/src'
make[1]: Entering directory '/var/local/PKGS/CRAN/GenomeAdmixR/src'
make[1]: Leaving directory '/var/local/PKGS/CRAN/GenomeAdmixR/src'
ERROR: compilation failed for package 'GenomeAdmixR'
* removing '/home/runner/R-patched/lib/GenomeAdmixR'
